<resources>
    <string name="app_name">퐁듀</string>

    <!-- 로그인 -->
    <string name="content_login_balloon">가입하여 선물 펀딩하기</string>
    <string name="content_login_banner_1">선물을 펀딩으로 받아보세요!</string>
    <string name="content_login_banner_2">받고 싶은 선물을 선택한 후,\n링크를 공유해 보세요.</string>
    <string name="content_login_banner_3">링크를 통해,\n친구들이 선물을 펀딩 할 거에요.</string>
    <string name="content_kakao_login">카카오톡으로 로그인</string>
    <string name="content_google_login">구글로 로그인</string>

    <!-- 홈 -->
    <string name="content_searchbar">찾으시는 선물을 검색해보세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_banner_indicator">%1$d / %2$d</string>
    <string name="title_category">어떤 상품을 찾고 있나요?</string>
    <string name="title_rank">앗 뜨거! 퐁듀에서 핫한 아이템!</string>
    <string name="title_random">오늘의 퐁듀</string>
    <string name="content_random_btn">더보기</string>
    <string name="title_popular_search">많이 검색한 키워드</string>
    <string name="title_AR_btn">AR</string>
    <string name="title_category_all">전체</string>
    <string name="title_category_digital">디지털/가전</string>
    <string name="title_category_living">인테리어</string>
    <string name="title_category_kitchen">주방용품</string>
    <string name="title_category_etc">기타</string>
    <string name="title_rank_price_default">상품 가격대를 설정해주세요</string>
    <string name="title_rank_price_range">%1$d만원 ~ %2$d만원</string>
    <string name="title_rank_startprice">0원</string>
    <string name="title_rank_endprice">100만원</string>

    <!-- 검색 -->
    <string name="title_search_recent_keyword_title">최근 검색어</string>
    <string name="title_search_recent_delete_keyword">모두 지우기</string>
    <string name="title_search_popular_keyword_title">인기 검색어</string>
    <string name="content_search_input_hint">찾으시는 선물을 검색해 보세요.</string>
    <string name="content_search_no_keyword">검색기록이 없습니다.</string>

    <!-- 퐁듀페이 CardView -->
    <string name="title_fondue_pay">퐁듀Pay</string>
    <string name="content_fondue_pay_balance">잔액 : %1$d원</string>

    <!-- 마이페이지 -->
    <string name="title_mypage_invited_fondue">초대 받은 퐁듀</string>
    <string name="title_mypage_my_fondue">내 퐁듀</string>
    <string name="title_mypage_favorite">찜</string>
    <string name="title_mypage_user_information">계정 기본 정보</string>
    <string name="title_mypage_notification_setting">알림 설정</string>
    <string name="title_mypage_app_version">앱버전</string>
    <string name="title_mypage_developer_information">개발자 정보</string>
    <string name="title_mypage_privacy">개인정보 수집 및 이용 방침</string>
    <string name="title_mypage_terms_of_service">서비스 이용약관</string>
    <string name="title_mypage_logout">로그아웃</string>
    <string name="title_mypage_fondue_pay_charge">퐁듀Pay 충전</string>
    <string name="content_mypage_app_version">v1.0.0</string>

    <!-- 계정 기본 정보 -->
    <string name="title_userinfo_email">이메일</string>
    <string name="title_userinfo_name">이름</string>
    <string name="title_userinfo_phone">연락처</string>
    <string name="title_userinfo_login_info">SNS 연동</string>
    <string name="title_userinfo_cancel_membership">회원탈퇴</string>

    <!-- 알림 설정 -->
    <string name="title_notisetting_all">알림 설정</string>
    <string name="title_notisetting_detail">상세 알림</string>
    <string name="title_notisetting_message">메세지 알림</string>
    <string name="title_notisetting_funding">펀딩 알림</string>
    <string name="title_notisetting_funding_close">펀딩 마감 알림</string>
    <string name="title_notisetting_funding_close_deadline">펀딩 마감 임박 알림</string>
    <string name="content_notisetting_info">알림을 설정하면 내 퐁듀와 초대 받은 퐁듀가 마감되었을 때 푸쉬 알림을 받으실 수 있습니다. 참여한 퐁듀에서 펀딩 금액 상위 1등 ~ 3등 참여자에게는 별도의 알림이 발송됩니다.</string>

    <!-- 초대 받은 퐁듀 -->
    <string name="content_invited_fondue_name">from.%1$s</string>
    <string name="content_invited_fondue_period">%1$s ~ %2$s</string>
    <string name="content_invited_fondue_join">참여</string>
    <string name="content_invited_fondue_ongoing">진행중</string>
    <string name="content_invited_fondue_done">종료</string>
    <string name="content_invited_fondue_non_join">미참여</string>
    <string name="content_invited_fondue_category_ongoing">진행 중인 펀딩</string>
    <string name="content_invited_fondue_category_done">종료된 펀딩</string>
    <string name="content_invited_fondue_category_non_join">미참여한 펀딩</string>
    <string name="content_invited_fondue_category_join">참여한 펀딩</string>
    <string name="content_invited_fondue_pay">%1$d원 펀딩</string>
    <string name="title_invited_fondue_appbar">선물 리스트</string>
    <string name="content_invited_fondue_message">김싸피님 집들이를 축하해 주세요!\n센스있는 집들이 선물을 기다리고 있습니다</string>

    <!-- 탈퇴하기 -->
    <string name="content_cancel_membership_username">%1$s님,</string>
    <string name="content_cancel_membership_top_message">만족스러운 서비스를 제공해드리지 못해 대단히 죄송합니다. 퐁듀를 떠나시려는 이유를 알려주세요😥</string>
    <string name="title_cancel_membership_reason_menu">탈퇴 사유를 선택해주세요</string>
    <string name="category_cancel_membership_reason_cancel_1">기록 삭제 목적</string>
    <string name="category_cancel_membership_reason_cancel_2">이용이 불편하고 오류가 많아서</string>
    <string name="category_cancel_membership_reason_cancel_3">사고싶은 상품이 없어서</string>
    <string name="category_cancel_membership_reason_cancel_4">알림이 너무 자주 울려서</string>
    <string name="category_cancel_membership_reason_cancel_5">기타</string>
    <string name="content_cancel_membership_solution_3_title">퐁듀가 알아서 상품을 추천해드릴게요!</string>
    <string name="content_cancel_membership_solution_3_content">랜덤과 검색 순위로 다양하고 인기있는 있는 상품을 추천 받아보세요.</string>
    <string name="content_cancel_membership_solution_btn"><u>%1$s 바로가기</u></string>
    <string name="content_cancel_membership_solution_4_title">서비스별로 알림을 설정해보세요!</string>
    <string name="content_cancel_membership_solution_4_content">알림 설정을 통해 받고싶은 알림만 받아보세요.</string>
    <string name="content_cancel_membership_final_message_title">탈퇴하기 버튼을 누르면 복구가 불가능합니다.</string>
    <string name="content_cancel_membership_final_message_content">탈퇴 즉시 모든 개인정보가 삭제되며 퐁듀 서비스 및 혜택을 받으실 수 없습니다.</string>
    <string name="title_cancel_membership_btn_back">돌아가기</string>
    <string name="title_cancel_membership_btn_withdraw">탈퇴하기</string>
    <string-array name="menu_withdrawal_membership_reason">
        <item>@string/category_cancel_membership_reason_cancel_1</item>
        <item>@string/category_cancel_membership_reason_cancel_2</item>
        <item>@string/category_cancel_membership_reason_cancel_3</item>
        <item>@string/category_cancel_membership_reason_cancel_4</item>
        <item>@string/category_cancel_membership_reason_cancel_5</item>
    </string-array>

    <!-- 결제하기 -->
    <string name="title_pay_gift_item">선물 항목</string>
    <string name="content_pay_remain">남았어요!</string>
    <string name="content_pay_input_funding_price">펀딩할 금액 입력</string>\
    <string name="title_pay_btn_all">퐁듀하기</string>
    <string name="title_pay_btn_10000">+ 10,000</string>
    <string name="title_pay_btn_50000">+ 50,000</string>
    <string name="title_pay_btn_all_describtion">남은 금액 전부 펀딩</string>
    <string name="title_pay_input_info">정보 입력</string>
    <string name="title_pay_sender">보내는 사람</string>
    <string name="title_pay_message">메시지</string>
    <string name="title_pay_payment_option">결제 수단</string>
    <string name="title_pay_fondue_pay">퐁듀Pay 머니</string>
    <string name="title_pay_funding">%1$d원 펀딩하기</string>
    <string name="title_pay_success">%1$s님의 퐁듀를\n완료하였습니다.</string>

    <!-- 위시리스트 -->
    <string name="title_wishlist_funding_info">펀딩 생성 정보</string>
    <string name="title_wishlist_item_price">상품 총액</string>
    <string name="title_wishlist_item_count">수량</string>
    <string name="title_wishlist_funding_period">펀딩 기간</string>
    <string name="content_wishlist_balloon">친구들과 펀딩 정보를 공유할 수 있어요</string>
    <string name="title_wishlist_calendar">펀딩 기간을 설정해주세요</string>
    <string name="content_wishlist_funding_period">%1$s ~ %2$s</string>

    <!-- 카테고리 -->
    <string-array name="category_num">
        <item>전체</item>
        <item>인테리어</item>
        <item>디지털/가전</item>
        <item>주방용품</item>
        <item>기타</item>
    </string-array>

    <!-- FireStorage -->
    <string name="fire_storage_url_prefix">
        https://firebasestorage.googleapis.com/v0/b/fundyou-1674632553418.appspot.com/o/
    </string>
    <string name="fire_storage_url_suffix">
        \?alt=media
    </string>

    <string name="privacy">
        1. 수집하는 개인정보 이용자는 회원가입을 하지 않아도 정보 검색, 뉴스 보기 등 대부분의 퐁듀 서비스를 회원과 동일하게 이용할 수 있습니다.
이용자가 메일, 캘린더, 카페, 블로그 등과 같이 개인화 혹은 회원제 서비스를 이용하기 위해 회원가입을 할 경우, 퐁듀는 서비스 이용을 위해 필요한 최소한의 개인정보를 수집합니다.회원가입 시점에 퐁듀 이용자로부터 수집하는 개인정보는 아래와 같습니다.회원 가입 시 필수항목으로 아이디, 비밀번호, 이름, 생년월일, 성별, 휴대전화번호를, 선택항목으로 본인확인 이메일주소를 수집합니다. 단, 비밀번호 없이 회원 가입 시에는 필수항목으로 아이디, 이름, 생년월일, 휴대전화번호를, 선택항목으로 비밀번호를 수집합니다. 만약 이용자가 입력하는 생년월일이 만14세 미만 아동일 경우에는 법정대리인 정보(법정대리인의 이름, 생년월일, 성별, 중복가입확인정보(DI), 휴대전화번호)를 추가로 수집합니다.
단체 회원가입 시 필수 항목으로 단체아이디, 비밀번호, 단체이름, 이메일주소, 휴대전화번호를, 선택항목으로 단체 대표자명을 수집합니다. 회원 가입 시 수집하는 개인정보에 대한 추가 설명 내용 서비스 이용 과정에서 이용자로부터 수집하는 개인정보는 아래와 같습니다.회원정보 또는 개별 서비스에서 프로필 정보(별명, 프로필 사진)를 설정할 수 있습니다. 회원정보에 별명을 입력하지 않은 경우에는 마스킹 처리된 아이디가 별명으로 자동 입력됩니다. 퐁듀 내의 개별 서비스 이용, 이벤트 응모 및 경품 신청 과정에서 해당 서비스의 이용자에 한해 추가 개인정보 수집이 발생할 수 있습니다. 추가로 개인정보를 수집할 경우에는 해당 개인정보 수집 시점에서 이용자에게 ‘수집하는 개인정보 항목, 개인정보의 수집 및 이용목적, 개인정보의 보관기간’에 대해 안내 드리고 동의를 받습니다.
    </string>
    <string name="service"> 여러분을 환영합니다.퐁듀 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 퐁듀 서비스의 이용과 관련하여 퐁듀 서비스를 제공하는 퐁듀 주식회사(이하 ‘퐁듀’)와 이를 이용하는 퐁듀 서비스 회원(이하 ‘회원’) 또는 비회원과의 관계를 설명하며, 아울러 여러분의 퐁듀 서비스 이용에 도움이 될 수 있는 유익한 정보를 포함하고 있습니다.퐁듀 서비스를 이용하시거나 퐁듀 서비스 회원으로 가입하실 경우 여러분은 본 약관 및 관련 운영 정책을 확인하거나 동의하게 되므로, 잠시 시간을 내시어 주의 깊게 살펴봐 주시기 바랍니다 다양한 퐁듀 서비스를 즐겨보세요. 퐁듀는 www.naver.com을 비롯한 퐁듀 도메인의 웹사이트 및 응용프로그램(어플리케이션, 앱)을 통해 정보 검색, 다른 이용자와의 커뮤니케이션, 콘텐츠 제공, 상품 쇼핑 등 여러분의 생활에 편리함을 더할 수 있는 다양한 서비스를 제공하고 있습니다. 여러분은 PC, 휴대폰 등 인터넷 이용이 가능한 각종 단말기를 통해 각양각색의 퐁듀 서비스를 자유롭게 이용하실 수 있으며, 개별 서비스들의 구체적인 내용은 각 서비스 상의 안내, 공지사항, 퐁듀 웹고객센터(이하‘고객센터’) 도움말 등에서 쉽게 확인하실 수 있습니다.
퐁듀는 기본적으로 여러분 모두에게 동일한 내용의 서비스를 제공합니다. 퐁듀는 여러분이 부여해 주신 콘텐츠 이용 권한을 저작권법 등 관련 법령에서 정하는 바에 따라 퐁듀 서비스 내 노출, 서비스 홍보를 위한 활용, 서비스 운영, 개선 및 새로운 서비스 개발을 위한 연구, 웹 접근성 등 법률상 의무 준수, 외부 사이트에서의 검색, 수집 및 링크 허용을 위해서만 제한적으로 행사할 것입니다. 만약, 그 밖의 목적을 위해 부득이 여러분의 콘텐츠를 이용하고자 할 경우엔 사전에 여러분께 설명을 드리고 동의를 받도록 하겠습니다.
또한 여러분이 제공한 소중한 콘텐츠는 퐁듀 서비스를 개선하고 새로운 퐁듀 서비스를 제공하기 위해 인공지능 분야 기술 등의 연구 개발 목적으로 퐁듀 및 퐁듀 계열사에서 사용될 수 있습니다. 퐁듀는 지속적인 연구 개발을 통해 여러분께 좀 더 편리하고 유용한 서비스를 제공해 드릴 수 있도록 최선을 다하겠습니다. 퐁듀는 여러분이 자신이 제공한 콘텐츠에 대한 퐁듀 또는 다른 이용자들의 이용 또는 접근을 보다 쉽게 관리할 수 있도록 다양한 수단을 제공하기 위해 노력하고 있습니다. 여러분은 퐁듀 서비스 내에 콘텐츠 삭제, 비공개 등의 관리기능이 제공되는 경우 이를 통해 직접 타인의 이용 또는 접근을 통제할 수 있고, 고객센터를 통해서도 콘텐츠의 삭제, 비공개, 검색결과 제외 등의 조치를 요청할 수 있습니다. 다만, 일부 퐁듀 서비스의 경우 삭제, 비공개 등의 처리가 어려울 수 있으며, 이러한 내용은 각 서비스 상의 안내, 공지사항, 고객센터 도움말 등에서 확인해 주시길 부탁 드립니다.
여러분의 개인정보를 소중히 보호합니다.
퐁듀는 서비스의 원활한 제공을 위하여 회원이 동의한 목적과 범위 내에서만 개인정보를 수집.이용하며, 개인정보 보호 관련 법령에 따라 안전하게 관리합니다. 퐁듀가 이용자 및 회원에 대해 관련 개인정보를 안전하게 처리하기 위하여 기울이는 노력이나 기타 상세한 사항은 개인정보 처리방침에서 확인하실 수 있습니다.

퐁듀는 여러분이 서비스를 이용하기 위해 일정 기간 동안 로그인 혹은 접속한 기록이 없는 경우, 전자메일, 서비스 내 알림 또는 기타 적절한 전자적 수단을 통해 사전에 안내해 드린 후 여러분의 정보를 파기하거나 분리 보관할 수 있으며, 만약 이로 인해 서비스 제공을 위해 필수적인 정보가 부족해질 경우 부득이 관련 서비스 이용계약을 해지할 수 있습니다.
    </string>

</resources>