<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/hscv_item_list_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipg_item_list_category"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/btn_item_list_category_all"
                    style="@style/custom_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/title_category_all"
                    app:chipStrokeWidth="1dp"
                    android:layout_marginStart="10dp"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/btn_item_list_category_living"
                    style="@style/custom_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_category_living"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/btn_item_list_category_digital"
                    style="@style/custom_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_category_digital"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/btn_main_rank_category_kitchen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_category_kitchen"
                    style="@style/custom_chip"
                    app:chipStrokeWidth="1dp"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/btn_item_list_category_etc"
                    style="@style/custom_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_category_etc"
                    app:chipStrokeWidth="1dp"
                    android:layout_marginEnd="10dp"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dv_item_list_on_sld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_horizontal_margin"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_list_price_range"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hscv_item_list_category" />

        <TextView
            android:id="@+id/tv_item_list_price_range"
            style="@style/base_font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rank_price_default"
            android:textColor="@color/franch_rose"
            app:layout_constraintBottom_toTopOf="@+id/sld_item_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dv_item_list_on_sld" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/sld_item_list"
            style="@style/main_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="00.0"
            android:valueTo="400.0"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toTopOf="@id/dv_item_list_under_sld"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_list_price_range"
            app:values="@array/initial_rank_price_values" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dv_item_list_under_sld"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_vertical_margin"
            app:layout_constraintBottom_toTopOf="@id/rv_item_list"
            app:layout_constraintEnd_toEndOf="@+id/dv_item_list_on_sld"
            app:layout_constraintStart_toStartOf="@+id/dv_item_list_on_sld"
            app:layout_constraintTop_toBottomOf="@+id/sld_item_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/base_horizontal_margin"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dv_item_list_under_sld" />

        <include
            android:id="@+id/ly_item_list_no_content"
            layout="@layout/content_no_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sld_item_list"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
