<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/bg_rect_black_white_round8_stroke1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_invited_fondue_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_invited_fondue_name"
            android:src="@drawable/bg_banner_ssafylogo"/>

        <TextView
            android:id="@+id/tv_invited_fondue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_invited_fondue_profile"
            android:text="@string/content_invited_fondue_name"
            app:layout_constraintBottom_toTopOf="@+id/tv_invited_fondue_period"
            style="@style/base_font_bold_16_black"
            android:textColor="@color/black"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/tv_invited_fondue_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_invited_fondue_name"
            app:layout_constraintBottom_toTopOf="@+id/btn_invited_fondue_join_or_not"
            android:text="@string/content_invited_fondue_period"
            style="@style/base_font_medium_16"
            android:textSize="36sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_invited_fondue_join_or_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_invited_fondue_ongoing_or_done"
            app:layout_constraintTop_toBottomOf="@id/tv_invited_fondue_period"
            app:layout_constraintBottom_toTopOf="@+id/tv_invited_fondue_pay"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_invited_fondue_ongoing_or_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btn_invited_fondue_join_or_not"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_invited_fondue_join_or_not"/>

        <TextView
            android:id="@+id/tv_invited_fondue_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/content_invited_fondue_pay"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
